Updated cron and added creation of first blog post

--- a/files/crontab.example
+++ b/files/crontab.example
@@ -1,5 +1,5 @@
 SHELL=/bin/bash
-PATH=/sbin:/bin:/usr/sbin:/usr/bin:/home/blog/secondcrack
+PATH=/sbin:/bin:/usr/sbin:/usr/bin:/home/blog/secondcrack:
 MAILTO=root
 HOME=/
 
